# butterfly

./: .gitignore  Cargo.toml
butterfly_extractor/src/: errors.rs  webpage_parser.rs
src/: butterfly.rs  butterfly_collector.rs  butterfly_region.rs  client.rs  cloud_vision.rs  constants.rs  csv_data.rs  errors.rs  image_loader.rs  lib.rs  main.rs  webpage_parser.rs
