[package]
name = "butterfly"
version = "0.1.0"
authors = ["Hiroto Shioi <hiroto.shioi@iohk.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.10.1"
reqwest = "0.9.20"
kanaria = "0.1.1"
hex = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0.99", features = ["derive"]}